<resources>
    <string name="app_name">TO DO APP</string>
    <string name="enter_your_task">Enter your task</string>
    <string name="add_task">Add Task</string>
    <string name="enter_task">Enter Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="completed">Completed</string>
    <string name="task_name">Task Name</string>
    <string name="add_a_task">Add a task</string>
    <string name="my_to_do_list">My To-Do List</string>

</resources>