<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/checkBoxTaskCompleted"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="7dp"
        android:text="@string/completed"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/imageViewDelete"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="19dp"
        android:layout_toStartOf="@id/checkBoxTaskCompleted"
        android:contentDescription="@string/delete_task"
        android:src="@drawable/ic_delete"
        app:tint="#F54D4D" />

</RelativeLayout>
