<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="back"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_to_do_list"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:autofillHints="add task "
        android:background="@drawable/edittext_bg"
        android:hint="@string/add_a_task"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTask"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_bg"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/add_task"
        android:textColor="#080809" />

    <ListView
        android:id="@+id/listViewTasks"
        android:layout_width="wrap_content"
        android:layout_height="531dp"
        android:layout_below="@+id/buttonAdd"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp" />



</RelativeLayout>
